# Nav2_simulation

nav2_sim/: CMakeLists.txt  package.xml
nav2_sim/launch/: sim.launch.py
ros2_tutorials/: CMakeLists.txt  package.xml
ros2_tutorials/src/: action_client.cpp  action_server.cpp
